Complete version history
========================

2015-11-30 v0.16 pjacklam

 * Use ExtUtils::MakeMaker rather than Module::Install in Makefile.PL

 * Add from_bin(), from_oct(), and from_hex().

 * Add test files t/from_bin-mbl.t, t/from_oct-mbl.t, and t/from_hex-mbl.t.

 * Remove INSTALL file. The information is in the README file.

 * Correct minor errors in README file.

 * Update the BUGS file.

 * Explicitly set required version of Math::BigInt in Math/BigInt/Lite.pm.

 * Remove author information in LICENSE file.

 * Inform that the TODO file is not up to date.

 * CHANGES now has same formatting as the other Math::BigInt-related
   distributions.

 * Remove unused variables in Math/BigInt/Lite.pm.

2015-11-25 v0.15 pjacklam

 * POD nits

 * Remove trailing whitespace.

 * Consistent indentation in POD.

 * Reorder change entries into chronological order.

 * Better use of the functionality in Test::More.

 * Sync test files with the Math-BigInt distribution.

 * Correct method bdiv() to do floored division.

 * Add method btdiv().

 * Remove Math::BigRat as a requirement. We don't use it.

 * Update required version of Math::BigInt to 1.999801.

 * Change required version of Test::More to 0.47.

 * Code reformatting.

 * Update files NEW, README, and TODO.

2010-09-14 v0.14 rafl (3202 tests)

 * Add a test for a blog() failure caused by a Math::BigInt bug

 * Depend on Math::BigInt 1.94 to fix the above failure

2010-09-10 v0.13 rafl (3200 tests)

 * Fix tests with Math::BigInt >= 1.90 and depend on it.

2007-05-27 v0.12 Tels (3194 tests)

 * add round-mode "common"

 * add support for bexp() and bnok()

 * tests from Math::BigInt v1.86

 * require Math::BigInt v1.86

 * require Math::BigRat v0.19

 * bundle and use Module::Install

 * add POD tests

2004-01-06 v0.11 Tels (2879 tests)

 * fix perl -Mbignum -le 'print 10->blog()' (did die with error)

 * added method broot(), bmodpow() and bmodinv()
