@@ -7,3 +7,4 @@
 ^MANIFEST.(old|bak)\z
 pm_to_blib
 \.git
+~\z
