@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 7.24, CPAN::Meta::Converter version 2.150010'
+generated_by: 'ExtUtils::MakeMaker version 7.24, CPAN::Meta::Converter version 2.150001'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -21,5 +21,4 @@ requires:
   Math::BigInt: '1.999801'
   Test::More: '0.94'
   perl: '5.006'
-version: '0.16'
-x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
+version: '0.17'
