@@ -15,17 +15,17 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 c77b7d6607729c628927986f21aa270b7fb77737 BUGS
-SHA1 ba7712991c8518f29190dbbb9da47d4bc3fdace7 CHANGES
+SHA1 e9e761ef02c4f6067efd54fff7c75faf04450bf3 CHANGES
 SHA1 d7c83d8f89b92a3262a01eb2778d39402e77263a LICENSE
 SHA1 20fa01cb3cef36ee3f372144cc01eb019984506a MANIFEST
-SHA1 22fd987b99f18846a674a6d046913468121a57ac MANIFEST.SKIP
-SHA1 6fb8d87af14640b4ee376eb3f8c70eee4fa3dc68 META.json
-SHA1 39d73e24c66ff473307a5942cf6b7b822ba96cc0 META.yml
+SHA1 48d2f63f37c05a530a864a0e808a5dc78980c4f2 MANIFEST.SKIP
+SHA1 5465b1626007eae0c3f798b29571627ae13d1141 META.json
+SHA1 f4b41d079d1ec3570a8892bb9783d745eea83d21 META.yml
 SHA1 3e00dabe6c8d1f49e7134c8ec1cf32ac774de933 Makefile.PL
 SHA1 fa23172f6c9445f82d09680a2f7d42ea386b36e2 NEW
 SHA1 ba678389bdd7d51702a02abb5fedab243f6f5209 README
 SHA1 9cb6d05fd79edf4bd657ba8ea01e31dd2db77ac1 TODO
-SHA1 33398b9e716f8b3bf55dfcb3b90fd2965c64b64b lib/Math/BigInt/Lite.pm
+SHA1 5b6fb7cc5e684a4b182c65a1a25865602786c6c1 lib/Math/BigInt/Lite.pm
 SHA1 c48fcc967e22b44d8c3880e2c5e6c3c4092093f4 t/alias.inc
 SHA1 8a305081a2db9b3954364585f526766610ebd88d t/bigintpm.inc
 SHA1 5a19a35d0a463e1bd7529c108a9545e18c926938 t/bigintpm.t
@@ -39,11 +39,11 @@ SHA1 9fd69ee86e39a6253559bd80861ccd0ec5a88d16 t/pod_cov.t
 SHA1 a872151e84b3f57a8835a979d905aeee059451b1 t/with.t
 -----BEGIN PGP SIGNATURE-----
 
-iQEcBAEBAgAGBQJYQ9W3AAoJEGcmPl2fr166fFoIAJEqRwfEQjdJ79/dxJJkqPCt
-P6sCJpBsb/8bM9rkVFwWRUfg/b6T1SvJLpp/Tad2+R3ZrJqH3DOuYax2Zv+wDRiu
-tkWORtmzdz1xEjIQoHplsxufr4o4uoQTAxcq0qMEWwoa8OTUSRnkSci060a9CqWZ
-U/EeO3+Ib81j1VB1qS+ghXtagCLsBhM4hxHD/tl96rBNtYBlpeuEKfbi0Sylhr7k
-r0L8t23sjDqyYzpWp1UaHyuT6N3S+MzFC3NbAkQKqxIvJ9viEKv7B4p2kpgk1Ste
-e4v36kHsZPe8jAhUFBeq0sv3XJM1LD2z7XdF5WAzZ1/NMQa7ITZ8/eXgv+h30HU=
-=eUdZ
+iQEcBAEBAgAGBQJYtr5WAAoJEGcmPl2fr166CcYH/R1WBNbHfRR4oJCzYvBEmpbx
+MwXLfHs60w+jvCqQz1TcSTS0fgadxpM4G4zCFz+T62TeBIDg0rKqxl4+iMgYez/c
+KK8UFvdH2G6QrpjwlYzMeNJY6dI9jI+IehlE2dU2FRXqElQZ6rHkmVzrU184kTZY
+efcyzL1lY3tUbnM5nb2i0R4JPNWho0yQRlQQ//Mmu2oA4WynfwahiQwrGr9Pvtwr
+RtX/3A6zjgP4eS+DAwAtKZz40gb5G685arqwqvi1ys5lRnyjuILyx4UvQ6uTt4Dr
+gljc9ykrdbkN+SsCDarz7KrK5OwMfIRlF9rsOZVERsapoonQkfxLhhN2utxBtro=
+=vGQ5
 -----END PGP SIGNATURE-----
